Foundation for Website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,307 @@
+﻿<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Elysium by Georgie Rose | Permanent Jewellery</title>
+  <meta name="description" content="Bespoke permanent jewellery in gold and sterling silver, custom-fitted and welded for lasting memories. Wedding packages, pop-ups, and private appointments available.">
+  <meta property="og:title" content="Elysium by Georgie Rose | Permanent Jewellery">
+  <meta property="og:description" content="Custom-fitted, welded permanent jewellery in gold and sterling silver. Weddings, pop-ups, and private appointments.">
+  <meta property="og:image" content="assets/images/final-logo.jpg">
+  <meta property="og:type" content="website">
+  <link rel="stylesheet" href="assets/style.css">
+  <!-- Update image paths below if your filenames differ. -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Elysium by Georgie Rose",
+    "alternateName": "Elysium Permanent Jewellery",
+    "image": "assets/images/final-logo.jpg",
+    "description": "Permanent welded jewellery and pop-up experiences in Staffordshire.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "65 George Street",
+      "addressLocality": "Newcastle-under-Lyme",
+      "addressRegion": "Staffordshire",
+      "addressCountry": "GB"
+    },
+    "location": [
+      {
+        "@type": "Place",
+        "name": "Panache",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "15 Young St",
+          "addressLocality": "Cheadle",
+          "addressRegion": "Stoke-on-Trent",
+          "postalCode": "ST10 1HL",
+          "addressCountry": "GB"
+        }
+      }
+    ],
+    "sameAs": [
+      "https://www.instagram.com/elysium_by_georgierose/",
+      "https://www.facebook.com/profile.php?id=61571925904476"
+    ]
+  }
+  </script>
+</head>
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
 
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="logo" href="index.html">
+        <img src="assets/images/final-logo.jpg" alt="Elysium by Georgie Rose logo">
+        <div>
+          <div>Elysium by Georgie Rose</div>
+          <small class="text-muted">Permanent jewellery</small>
+        </div>
+      </a>
+      <div class="nav-actions">
+        <nav class="site-nav" aria-label="Main">
+          <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
+          <div id="navMenu" class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="services.html">Services</a>
+            <a href="weddings.html">Weddings</a>
+            <a href="popups.html">Pop-ups</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="faq.html">FAQs</a>
+            <a href="contact.html">Contact</a>
+          </div>
+        </nav>
+        <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="main">
+    <section class="hero">
+      <div class="container hero-grid">
+        <div>
+          <p class="pill">Permanent welded jewellery</p>
+          <h1>Custom-fitted pieces designed to stay with you.</h1>
+          <p class="lead">Choose a chain, add charms, and we custom-fit and weld your bracelet, anklet, ring, waist chain, or necklace for a seamless, timeless finish.</p>
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="contact.html">Make an enquiry</a>
+            <a class="btn btn-secondary" href="services.html">View services</a>
+          </div>
+          <div class="trust-row">
+            <span class="badge">Custom fit</span>
+            <span class="badge">Gold and sterling silver</span>
+            <span class="badge">Pop-ups available</span>
+            <span class="badge">Wedding packages</span>
+            <span class="badge">Gift-ready</span>
+          </div>
+        </div>
+        <div class="hero-image">
+          <img src="assets/images/banner-for-pop-ups.png" alt="Elysium permanent jewellery pop-up styling">
+        </div>
+      </div>
+    </section>
+
+    <section class="section surface">
+      <div class="container">
+        <h2 class="section-title">Why Elysium</h2>
+        <p class="section-subtitle">A calm, premium experience for meaningful jewellery moments.</p>
+        <div class="grid grid-3">
+          <div class="card">
+            <h3>Bespoke fit</h3>
+            <p>Each piece is measured, adjusted, and welded for a clean, seamless fit that feels effortless.</p>
+          </div>
+          <div class="card">
+            <h3>Meaningful moments</h3>
+            <p>Mark milestones with a piece you never need to take off. Perfect for best friends, couples, and families.</p>
+          </div>
+          <div class="card">
+            <h3>Quality materials</h3>
+            <p>Choose sterling silver, gold filled, or solid gold chains, plus curated charms and add-ons.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="media-row">
+          <div>
+            <h2 class="section-title">What to expect</h2>
+            <p class="section-subtitle">Simple, personal, and beautifully quick.</p>
+            <div class="steps">
+              <div class="step">
+                <span>01</span>
+                <h3>Choose your chain and charms</h3>
+                <p>Select your preferred chain style and optional charms or connectors.</p>
+              </div>
+              <div class="step">
+                <span>02</span>
+                <h3>Custom fitting</h3>
+                <p>We measure and adjust for the perfect fit, whether bracelet, anklet, or necklace.</p>
+              </div>
+              <div class="step">
+                <span>03</span>
+                <h3>Weld and aftercare</h3>
+                <p>Your jewellery is welded on and you receive aftercare guidance for everyday wear.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card simple">
+            <h3>Book with confidence</h3>
+            <p class="text-muted">Appointments are custom-fitted and welded on-site. Pop-ups and weddings can be hosted at your venue or partner space.</p>
+            <p><strong>Booking platform:</strong> Fresha listing available (link configurable).</p>
+            <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section surface">
+      <div class="container">
+        <h2 class="section-title">Services preview</h2>
+        <p class="section-subtitle">Permanent jewellery designed around your lifestyle.</p>
+        <div class="grid grid-3">
+          <a class="card" href="services.html#bracelets">
+            <h3>Bracelets</h3>
+            <p>Delicate or bold chains, custom-fitted and welded for everyday wear.</p>
+          </a>
+          <a class="card" href="services.html#anklets">
+            <h3>Anklets</h3>
+            <p>Elegant ankle chains with optional charms for a subtle statement.</p>
+          </a>
+          <a class="card" href="services.html#necklaces">
+            <h3>Necklaces</h3>
+            <p>Collars and pendants welded to your exact neckline.</p>
+          </a>
+          <a class="card" href="services.html#rings">
+            <h3>Rings</h3>
+            <p>Sleek welded rings for modern, minimal styling.</p>
+          </a>
+          <a class="card" href="services.html#waist-chains">
+            <h3>Waist chains</h3>
+            <p>Custom lengths for styling, events, or layered looks.</p>
+          </a>
+          <!-- Optional service card: remove if not offered -->
+          <a class="card" href="services.html#nails">
+            <h3>Gel nails / builder gel</h3>
+            <p>Available at Panache, 15 Young St, Cheadle, ST10 1HL.</p>
+          </a>
+        </div>
+        <div style="margin-top: 24px;">
+          <a class="btn btn-secondary" href="services.html">View all services</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container grid grid-2">
+        <div class="card">
+          <h2>Weddings and groups</h2>
+          <p class="text-muted">Create a guest experience station with custom-fitted jewellery for the bridal party or the whole celebration.</p>
+          <a class="btn btn-primary" href="weddings.html">Explore wedding packages</a>
+        </div>
+        <div class="card">
+          <h2>Pop-ups</h2>
+          <p class="text-muted">Bring the Elysium experience to boutiques, salons, or events. We provide the full setup.</p>
+          <ul>
+            <li>Next dates: To be announced</li>
+            <li>Private group bookings available</li>
+          </ul>
+          <a class="btn btn-secondary" href="popups.html">View pop-up info</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section surface">
+      <div class="container grid grid-2">
+        <div>
+          <h2 class="section-title">Gallery</h2>
+          <p class="section-subtitle">A glimpse of recent fittings, pop-ups, and wedding moments.</p>
+          <a class="btn btn-secondary" href="gallery.html">View the gallery</a>
+        </div>
+        <div class="card simple">
+          <h3>Follow along</h3>
+          <p class="text-muted">See the latest pieces, behind-the-scenes, and event dates on Instagram.</p>
+          <a class="btn btn-primary" href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Follow on Instagram</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">FAQs</h2>
+        <p class="section-subtitle">Quick answers to common questions.</p>
+        <div class="details-group" data-accordion>
+          <details>
+            <summary>Does permanent jewellery hurt to remove?</summary>
+            <p>No. If you ever need to remove your jewellery, simply cut the jump ring with scissors and keep the chain for re-welding.</p>
+          </details>
+          <details>
+            <summary>How long does the appointment take?</summary>
+            <p>Most fittings take 15 to 30 minutes depending on the piece and any charms.</p>
+          </details>
+          <details>
+            <summary>Can I choose different metals?</summary>
+            <p>Yes. Options include sterling silver, gold filled, and solid gold chains.</p>
+          </details>
+          <details>
+            <summary>Are pop-ups available for groups?</summary>
+            <p>Absolutely. We can bring the experience to salons, boutiques, or private parties.</p>
+          </details>
+        </div>
+        <div style="margin-top: 24px;">
+          <a class="btn btn-secondary" href="faq.html">View all FAQs</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="card">
+          <h2>Ready to book or ask a question?</h2>
+          <p class="text-muted">Tell us about the piece you have in mind and your preferred dates.</p>
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="contact.html">Enquire now</a>
+            <a class="btn btn-secondary" href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Message on Instagram</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <h3>Elysium by Georgie Rose</h3>
+        <p class="text-muted">Permanent jewellery experiences in Staffordshire and beyond. Custom-fitted, welded, and designed to last.</p>
+        <small>(c) <span data-year></span> Elysium by Georgie Rose.</small>
+      </div>
+      <div class="footer-links">
+        <strong>Quick links</strong>
+        <a href="services.html">Services</a>
+        <a href="weddings.html">Weddings</a>
+        <a href="popups.html">Pop-ups</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="footer-links">
+        <strong>Policies</strong>
+        <a href="policies/privacy.html">Privacy</a>
+        <a href="policies/cookies.html">Cookies</a>
+        <a href="policies/accessibility.html">Accessibility</a>
+        <strong>Social</strong>
+        <a href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+      </div>
+    </div>
+  </footer>
+
+  <div class="cookie-banner" role="dialog" aria-live="polite" aria-label="Cookie notice">
+    <span>We only use cookies for embedded social content. You can continue browsing if you are happy with this.</span>
+    <button type="button">Got it</button>
+  </div>
+
+  <script src="assets/site.js"></script>
+</body>
+</html>
